--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "thread": "cpp",
         "cfenv": "cpp",
         "typeinfo": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "*.ipp": "cpp"
     }
 }
